# MOTION

./: CMakeLists.txt
scripts/: build-ffi.sh  provision-focal64.sh
src/examples/: CMakeLists.txt
src/examples/hamming/: CMakeLists.txt  hamming.cpp
src/examples/hamming/common/: hamming.cpp
src/ffi/: CMakeLists.txt  motion.cpp  motion.h  test.cpp
src/motioncore/base/: output_message_handler.h
src/motioncore/communication/: shared_transport.h  tcp_transport.cpp  tcp_transport.h
src/motioncore/data_storage/: ot_extension_data.cpp
src/motioncore/primitives/: pseudo_random_generator.h
src/motioncore/primitives/random/: aes128_ctr_rng.cpp
src/motioncore/utility/: thread.cpp
